# Camera-Timelapse-Controller

./: .gitignore  README.md  README.zh-CN.md  bracket_capture.py  pyproject.toml  setup.py
camera_timelapse/: __init__.py  cli.py  cli_flow.py
camera_timelapse/camera/: config.py
camera_timelapse/capture/: __init__.py  aeb.py  common.py  manual.py  session.py  timing.py
camera_timelapse/core/: __init__.py  schedule.py
camera_timelapse/gphoto/: __init__.py  client.py
camera_timelapse/parsing/: __init__.py
camera_timelapse/system/: __init__.py  ptpcamera_guard.py
gphoto_timelapse/: aeb_capture.py  camera_config.py  capture.py  capture_common.py  cli.py  constants.py  gphoto.py  manual_capture.py  parsing.py
gphoto_timelapse/camera/: __init__.py  config.py
gphoto_timelapse/capture/: __init__.py  aeb.py  common.py  manual.py  session.py  timing.py
gphoto_timelapse/core/: log.py
gphoto_timelapse/gphoto/: __init__.py  client.py
gphoto_timelapse/parsing/: __init__.py
gphoto_timelapse/system/: ptpcamera_guard.py
