[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "camera-timelapse-controller"
version = "0.1.0"
description = "Control bracketed timelapse capture through gPhoto2."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Camera Timelapse Controller contributors" }
]
dependencies = []

[project.scripts]
camera-timelapse = "camera_timelapse.cli:main"

[tool.setuptools.packages.find]
include = ["camera_timelapse*"]
